# qaguru_hm16

./: README.md  pyproject.toml  pytest.ini
tests/: conftest.py  test_indirect.py  test_skip.py
